# TomatoJuice

./: .clang-format  .gitignore  README.md  build_test.bat  build_test.sh  macrononsense.c
common/: tomato_defines.h
hashtable/: README.md
matrix/: dmatrix.c  dmatrix.h
src/: CMakeLists.txt  tomato_string.h
src/common/: tomato_defines.h
src/hashtable/: tomato_hashtable.c  tomato_hashtable.h
src/string/: tomato_string.c  tomato_string.h
string/: tomato_string.c  tomato_string.h
test/: CMakeLists.txt  test_s8.cpp
test/hashtable/: test_hashtable.sh
test/string/: build_test.sh  test_s8.c  test_s8.cpp
